--- a/availability.html
+++ b/availability.html
@@ -158,7 +158,7 @@
       <!-- 时间槽时长选择 -->
       <div class="mb-6 bg-neutral-50 p-4 rounded-lg border border-neutral-200">
         <div class="flex items-center">
-          <span class="text-neutral-600 mr-3 font-medium">Timeslot Duration:</span>
+          <span class="text-neutral-600 mr-3 font-medium">Duration of Play:</span>
           <div class="flex space-x-2">
             <div class="duration-option duration-option-active" data-duration="0.5">0.5 hours</div>
             <div class="duration-option" data-duration="1">1 hour</div>
