--- a/find-courts.html
+++ b/find-courts.html
@@ -257,7 +257,7 @@
             <div class="flex justify-between items-center">
               <span class="text-primary font-bold">$28/hour</span>
               <button class="px-3 py-1 bg-primary text-white rounded-lg text-sm hover:bg-primary/90 transition-all duration-300 view-details" data-court="Victoria City Courts">
-                View Details
+                Select Court
               </button>
             </div>
           </div>
@@ -281,7 +281,7 @@
             <div class="flex justify-between items-center">
               <span class="text-primary font-bold">$32/hour</span>
               <button class="px-3 py-1 bg-primary text-white rounded-lg text-sm hover:bg-primary/90 transition-all duration-300 view-details" data-court="Oak Bay Tennis Club">
-                View Details
+                Select Court
               </button>
             </div>
           </div>
@@ -305,7 +305,7 @@
             <div class="flex justify-between items-center">
               <span class="text-primary font-bold">$22/hour</span>
               <button class="px-3 py-1 bg-primary text-white rounded-lg text-sm hover:bg-primary/90 transition-all duration-300 view-details" data-court="Saanich Peninsula Courts">
-                View Details
+                Select Court
               </button>
             </div>
           </div>
@@ -329,7 +329,7 @@
             <div class="flex justify-between items-center">
               <span class="text-primary font-bold">$25/hour</span>
               <button class="px-3 py-1 bg-primary text-white rounded-lg text-sm hover:bg-primary/90 transition-all duration-300 view-details" data-court="UVic Tennis Complex">
-                View Details
+                Select Court
               </button>
             </div>
           </div>
@@ -353,7 +353,7 @@
             <div class="flex justify-between items-center">
               <span class="text-primary font-bold">$27/hour</span>
               <button class="px-3 py-1 bg-primary text-white rounded-lg text-sm hover:bg-primary/90 transition-all duration-300 view-details" data-court="Gordon Head Courts">
-                View Details
+                Select Court
               </button>
             </div>
           </div>
@@ -377,7 +377,7 @@
             <div class="flex justify-between items-center">
               <span class="text-primary font-bold">$30/hour</span>
               <button class="px-3 py-1 bg-primary text-white rounded-lg text-sm hover:bg-primary/90 transition-all duration-300 view-details" data-court="Esquimalt Tennis Courts">
-                View Details
+                Select Court
               </button>
             </div>
           </div>
