--- a/find-courts.html
+++ b/find-courts.html
@@ -255,7 +255,7 @@
               <span>4.9 (156 reviews)</span>
             </div>
             <div class="flex justify-between items-center">
-              <span class="text-primary font-bold">$28/hour</span>
+              <!--<span class="text-primary font-bold">$28/hour</span> -->
               <button class="px-3 py-1 bg-primary text-white rounded-lg text-sm hover:bg-primary/90 transition-all duration-300 view-details" data-court="Victoria City Courts">
                 Select Court
               </button>
@@ -279,7 +279,7 @@
               <span>4.7 (98 reviews)</span>
             </div>
             <div class="flex justify-between items-center">
-              <span class="text-primary font-bold">$32/hour</span>
+               <!--<span class="text-primary font-bold">$32/hour</span>  -->
               <button class="px-3 py-1 bg-primary text-white rounded-lg text-sm hover:bg-primary/90 transition-all duration-300 view-details" data-court="Oak Bay Tennis Club">
                 Select Court
               </button>
@@ -303,7 +303,7 @@
               <span>4.5 (76 reviews)</span>
             </div>
             <div class="flex justify-between items-center">
-              <span class="text-primary font-bold">$22/hour</span>
+              <!-- <span class="text-primary font-bold">$22/hour</span> -->
               <button class="px-3 py-1 bg-primary text-white rounded-lg text-sm hover:bg-primary/90 transition-all duration-300 view-details" data-court="Saanich Peninsula Courts">
                 Select Court
               </button>
@@ -327,7 +327,7 @@
               <span>4.9 (212 reviews)</span>
             </div>
             <div class="flex justify-between items-center">
-              <span class="text-primary font-bold">$25/hour</span>
+              <!--<span class="text-primary font-bold">$25/hour</span>-->
               <button class="px-3 py-1 bg-primary text-white rounded-lg text-sm hover:bg-primary/90 transition-all duration-300 view-details" data-court="UVic Tennis Complex">
                 Select Court
               </button>
@@ -351,7 +351,7 @@
               <span>4.6 (104 reviews)</span>
             </div>
             <div class="flex justify-between items-center">
-              <span class="text-primary font-bold">$27/hour</span>
+              <!--<span class="text-primary font-bold">$27/hour</span>-->
               <button class="px-3 py-1 bg-primary text-white rounded-lg text-sm hover:bg-primary/90 transition-all duration-300 view-details" data-court="Gordon Head Courts">
                 Select Court
               </button>
@@ -375,7 +375,7 @@
               <span>4.8 (135 reviews)</span>
             </div>
             <div class="flex justify-between items-center">
-              <span class="text-primary font-bold">$30/hour</span>
+              <!--<span class="text-primary font-bold">$30/hour</span>-->
               <button class="px-3 py-1 bg-primary text-white rounded-lg text-sm hover:bg-primary/90 transition-all duration-300 view-details" data-court="Esquimalt Tennis Courts">
                 Select Court
               </button>
