--- a/confirmation.html
+++ b/confirmation.html
@@ -129,10 +129,10 @@
               <p class="text-sm text-neutral-500 mb-1">Duration</p>
               <p class="font-medium text-neutral-800">2 hours</p>
             </div>
-            <div>
+            <!--<div>
               <p class="text-sm text-neutral-500 mb-1">Price</p>
               <p class="font-medium text-neutral-800">$30.00</p>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
