--- a/availability.html
+++ b/availability.html
@@ -283,9 +283,9 @@
               </div>
             </div> -->
             
-            <p class="text-sm text-neutral-500 mb-0">
+            <!-- <p class="text-sm text-neutral-500 mb-0">
               All prices include taxes. Court reservations can be canceled up to 24 hours in advance for a full refund.
-            </p>
+            </p> -->
           </div>
         </div>
       </div>
